# euterpium

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  InstallerManifest.yaml  README.md  api_client.py  app_resolver.py  audio_capture.py  config.py  euterpium.ini  euterpium.iss  euterpium.spec  fingerprint.py  game_detector.py  main.py  pyproject.toml  smtc.py  smtc_debug.py  tracker.py  updater.py  version.py
.github/: dependabot.yml
.github/agentic-workflows/: release-changelog.lock.yml  release-changelog.md
.github/scripts/: check-aw-stale.sh
.github/workflows/: auto-manage-artifacts.yml  auto-merge-dependabot.yml  auto-rebase-dependabot.yml  dependabot-make-release.yml  deploy-create-release-tag.yml  (+7 more)
app/: api_client.py  app_resolver.py  audio_capture.py  config.py  euterpium.ini  euterpium.iss  euterpium.spec  fingerprint.py  game_detector.py  main.py  pyproject.toml  rest_api.py  startup.py  tracker.py  version.py
app/tests/: conftest.py  test_api_client.py  test_app_resolver.py  test_audio.py  test_config.py  test_fingerprint.py  test_game_detector_api.py  test_rest_api.py  test_smtc.py  test_startup.py  test_tracker.py  test_updater.py
app/ui/: notifications.py  settings_window.py  tray.py  window.py
docs/: audio-detection.md  playnite-plugin.md
playnite-plugin/: EuterpiumExporter.cs  EuterpiumExporter.csproj  extension.yaml  plugin.yaml
tests/: test_audio.py  test_config.py  test_game_detector.py  test_smtc.py  test_tracker.py  test_updater.py  test_version.py
ui/: notifications.py  settings_window.py  tray.py  window.py
(+4 files in other folders)
