[tool.poetry]
name = "euterpium"
version = "0.1.0"
description = "Music detection and now-playing tracker"
authors = ["Nicholas <nicholas@istic.net>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.24.0"
psutil = ">=5.9.0"
requests = ">=2.31.0"
Pillow = ">=10.0.0"
platformdirs = ">=4.0.0"
soundcard = ">=0.4.2"
pystray = ">=0.19.0"
winsdk = { version = ">=1.0.0b10", markers = "sys_platform == 'win32'" }
win11toast = { version = ">=0.35", markers = "sys_platform == 'win32'" }
windowsapps = { git = "https://github.com/aquarion/windowsapps" }

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = ">=6.0", python = "<3.13" }
ruff = ">=0.9"
pytest = ">=8.0"
isort = ">=5.0"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501", # line too long — ruff-format handles wrapping
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = ["venv", "dist", "build", "__pycache__"]
profile = "black"
skip_glob = ["*.pyi", ".venv*", "dist*", "build*", "__pycache__*"]
skip_gitignore = true
